k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: birum-home-services
spec:
  type: NodePort
  selector:
    app: birum-home-services
  ports:
    - port: 8080
      targetPort: 8080
